# example_for_miki

./: CMakeLists.txt
code_folders/: CMakeLists.txt
code_folders/FileParser/: CMakeLists.txt
example_project_file_parser/: CMakeLists.txt  main.cs
net6.0/: CSharpSimpleOutput.txt  SimpleInput.txt  TestParser.deps.json
net6.0/linux-x64/: TestParser  TestParser.deps.json
