MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  message(STATUS "curdir = ${curdir}")
  message(STATUS "children = ${children}")
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

message(STATUS "code_folders: CMAKE_BINARY_DIR = ${CMAKE_BINARY_DIR}")
message(STATUS "code_folders: CMAKE_SOURCE_DIR = ${CMAKE_SOURCE_DIR}")

get_filename_component(folder_name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
message(STATUS "folder_name = ${folder_name}")
set(CODE_FOLDERS ${CMAKE_SOURCE_DIR}/${folder_name})

SUBDIRLIST(SUBDIRS ${CODE_FOLDERS})
FOREACH(subdir ${SUBDIRS})
    set(sub_dir_folder ${CODE_FOLDERS}/${subdir})
    message(STATUS "sub_dir_folder = ${sub_dir_folder}")
    add_subdirectory(${sub_dir_folder})
ENDFOREACH()
